--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,9 @@ plusy:
     path: 
       data: E:/work/plusy/data
       readstatus:  E:/work/plusy/readstatus
-  config: E:/work/plusy/plusy.json
+  config: 
+    spider: E:/work/plusy/plusy.json
+    user: E:/work/plusy/user.json
   spider.workdir: E:/work/plusy/spider
   scrapyd:
     project: plusy
